# okey-solver-py

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  coverage.xml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.run/: cli-example.run.xml  telegram-bot.run.xml
demo/console/: demo_cli.py
demo/telegram/: bot.py
docs/: ALGORITHM_RULES.md  ARCHITECTURE.md  CLI_USAGE.md  SOLVER_ENGINES.md  backtracking_solver.md  beam_search_solver.md  genetic_solver.md  greedy_solver.md  hybrid_solver.md  ilp_solver.md  index.md  mcts_solver.md  simulated_annealing_solver.md
okey_solver/: __init__.py  backtracking_solver.py  meld_generator.py  pair_finder.py  rules.py  solver.py  types.py
okey_vision/: __init__.py  engine.py  frame_adapter.py  orchestrator.py  providers.py  types.py
src/okey_core/: __init__.py  errors.py  types.py
src/okey_local_yolo/train/: okey_vision_train.ipynb
src/okey_orchestrator/: __init__.py  orchestrator.py
src/okey_server/: __init__.py  app.py  cli.py  dependencies.py  logging_config.py  otel_config.py  registry.py  routers.py  settings.py  state.py
src/okey_solver/: __init__.py  backtracking_solver.py  beam_search_solver.py  cli.py  dto.py  errors.py  evaluator.py  genetic_solver.py  greedy_solver.py  hybrid_solver.py  ilp_solver.py  mcts_solver.py  meld_generator.py  rules.py  simulated_annealing_solver.py  solver.py  types.py
src/okey_vision/: __init__.py  cli.py  engine.py  errors.py  frame_adapter.py  orchestrator.py  providers.py  py.typed  types.py
src/okey_vision/providers/: __init__.py  base.py  local_yolo.py  roboflow.py  roboflow_workflow.py
tests/: test_advanced_solvers.py  test_integration.py  test_server.py  test_solver.py  test_solver_property.py  test_strategic_solvers.py  test_vision.py
