[tool.poetry]
name = "okey-solver-py"
version = "0.1.1"
description = "Python port of okey-solver-ts and okey-vision-ts"
authors = ["Ata Can Yaymacı <atacanymc@gmail.com>"]
packages = [
    { include = "okey_solver", from = "src" },
    { include = "okey_vision", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0"
# Core dependencies
numpy = { version = ">=1.20,<3.0", optional = true }
opencv-python = { version = "^4.0", optional = true }
pillow = { version = ">=10,<13", optional = true }
requests = { version = "^2.31", optional = true }
ultralytics = { version = "^8.0", optional = true }
pyTelegramBotAPI = { version = "^4.12", optional = true }

[tool.poetry.extras]
vision = ["numpy", "opencv-python", "pillow", "requests", "ultralytics"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8,<10"
mypy = ">=1,<3"
ruff = ">=0.3,<0.16"

[tool.poetry.scripts]
okey-demo = "demo.console.demo_cli:run_solver_demo"
okey-solve = "okey_solver.cli:main"
okey-vision = "okey_vision.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
