[tool.poetry]
name = "okey-solver-py"
version = "0.3.0"
description = "Python port of okey-solver-ts and okey-vision-ts"
readme = "README.md"
authors = ["Ata Can Yaymacı <atacanymc@gmail.com>"]
packages = [
    { include = "okey_solver", from = "src" },
    { include = "okey_vision", from = "src" },
    { include = "okey_core", from = "src" },
    { include = "okey_orchestrator", from = "src" },
    { include = "okey_server", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0"
pydantic-settings = "^2.0"
# Core dependencies
numpy = { version = ">=1.20,<3.0", optional = true }
opencv-python = { version = "^4.0", optional = true }
pillow = { version = ">=10,<13", optional = true }
requests = { version = "^2.31", optional = true }
httpx = { version = "^0.27", optional = true }
ultralytics = { version = "^8.0", optional = true }
fastapi = { version = ">=0.139.2", optional = true }
starlette = ">=1.3.1"
uvicorn = { version = "^0.22.0", optional = true }
pyTelegramBotAPI = { version = "^4.12", optional = true }
torch = [
    { version = ">=2.6.0", optional = true, markers = "sys_platform != 'darwin' or platform_machine == 'arm64'" },
    { version = ">=2.0.0,<=2.2.2", optional = true, markers = "sys_platform == 'darwin' and platform_machine != 'arm64'" }
]
torchvision = [
    { version = ">=0.28.0", optional = true, python = ">=3.10,<3.14.1 || >3.14.1,<4.0", markers = "sys_platform != 'darwin' or platform_machine == 'arm64'" },
    { version = ">=0.15.0,<=0.17.2", optional = true, markers = "sys_platform == 'darwin' and platform_machine != 'arm64'" }
]
roboflow = "^1.3.13"

[tool.poetry.extras]
vision = ["numpy", "opencv-python", "pillow", "requests", "httpx", "ultralytics", "torch", "torchvision"]
server = ["fastapi", "uvicorn", "dotenv"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8,<10"
pytest-asyncio = "^1.4.0"
pytest-cov = ">=4.1,<7.0"
mypy = ">=1,<3"
ruff = ">=0.3,<0.16"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.0"
mkdocs-material = "^9.5.0"
mkdocstrings-python = "^1.7.0"

[tool.poetry.scripts]
okey-demo = "demo.console.demo_cli:run_solver_demo"
okey-solve = "okey_solver.cli:main"
okey-vision = "okey_vision.cli:main"
okey-serve = "okey_server.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
omit = [
    "src/okey_solver/cli.py",
    "src/okey_vision/cli.py",
]
