[tool.poetry]
name = "okey-solver-py"
version = "0.5.0"
description = "Python port of okey-solver-ts and okey-vision-ts"
readme = "README.md"
authors = ["Ata Can Yaymacı <atacanymc@gmail.com>"]
packages = [
    { include = "okey_solver", from = "src" },
    { include = "okey_vision", from = "src" },
    { include = "okey_core", from = "src" },
    { include = "okey_orchestrator", from = "src" },
    { include = "okey_server", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydantic = "^2.0"
pulp = "^2.8.0"
pydantic-settings = { version = "^2.0", optional = true }
# Core dependencies
numpy = { version = ">=1.20,<3.0", optional = true }
opencv-python = { version = "^4.0", optional = true }
pillow = { version = ">=10,<13", optional = true }
requests = { version = "^2.31", optional = true }
httpx = { version = "^0.27", optional = true }
fastapi = { version = ">=0.139.2", optional = true }
starlette = ">=1.3.1"
uvicorn = { version = "^0.22.0", optional = true }
pyTelegramBotAPI = { version = "^4.12", optional = true }
inference-sdk = { version = "^1.3.5", optional = true }
python-multipart = { version = ">=0.0.32", optional = true }
structlog = { version = "^24.0.0", optional = true }
opentelemetry-api = { version = "^1.24.0", optional = true }
opentelemetry-sdk = { version = "^1.24.0", optional = true }
opentelemetry-instrumentation-fastapi = { version = ">=0.47b0", optional = true }
setuptools = ">=60.0.0,<82.0.0"
python-dotenv = { version = "^1.0.0", optional = true }

[tool.poetry.extras]
vision = ["numpy", "opencv-python", "pillow", "requests", "httpx", "inference-sdk"]
server = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "python-multipart",
    "pydantic-settings",
    "structlog",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi"
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8,<10"
pytest-asyncio = "^1.4.0"
pytest-cov = ">=4.1,<8.0"
mypy = ">=1,<3"
ruff = ">=0.3,<0.16"
hypothesis = "^6.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.0"
mkdocs-material = "^9.5.0"
mkdocstrings-python = "^1.7.0"

[tool.poetry.scripts]
okey-demo = "demo.console.demo_cli:run_solver_demo"
okey-solve = "okey_solver.cli:main"
okey-vision = "okey_vision.cli:main"
okey-serve = "okey_server.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
omit = [
    "src/okey_solver/cli.py",
    "src/okey_vision/cli.py",
]
